# downloader

./: Cargo.toml  README.md
src/: bar.rs  core.rs  download.rs  main.rs
src/models/: pessoa.rs
